<resources>
    <string name="app_name">MyApp</string>
    <string name="login_layout_main_text">AUTHORIZATION</string>
    <string name="user_name">USER NAME</string>
    <string name="register_text">REGISTER</string>
    <string name="password">PASSWORD</string>
    <string name="log_in">LOG IN</string>
    <string name="_10">+10</string>
    <string name="__10">-10</string>
    <!--    <string name="app_name">MyApp</string>-->
<!--    <string name="app_name">MyApp</string>-->

</resources>